# qcloud_iot_mqtt_sign

./: CMakeLists.txt  Makefile  cmake.settings  cmake_build.sh  make.settings  qcloud-dynreg-sign.c  qcloud-mqtt-sign.c  readme.md
platform/: HAL_Platform.c  HAL_Platform.h
utils/: qcloud_iot_log.c  qcloud_iot_log.h  utils_base64.c  utils_base64.h  utils_hmac.c  utils_hmac.h  utils_md5.c  utils_md5.h  utils_sha1.c  utils_sha1.h
